
2018-08-21 Franz Holzinger <franz@ttproducts.de>
    * support for TYPO3 8.7.x: Remove the parameter $debugLevel which has never been used.
        Global function debug() initializes its 6th argument to constant E_DEBUG which does not exist and then defaults to string 'E_DEBUG'. This raises a PHP 7.2 warning. see bug #83200.
    * Remove the file ext_autoload.php because composer will do this job.

2018-08-11 Franz Holzinger <franz@ttproducts.de>
    * support for TYPO3 9.3.x: see the manual for instructions

2018-06-05  Franz Holzinger  <franz@ttproducts.de>
    * bugfix: only use the hooks if the IP addresses and the TYPO3 mode match

2018-05-28  Franz Holzinger  <franz@ttproducts.de>
    * new feature: option to set a regular expression for sys_log entries which will not produce an entry in the debug log. This is needed in order not to overwrite a debug file with uninteresting no_cache warnings.
    * do not debug sys_log if $params['initLog'] is true

2018-04-18  Franz Holzinger  <franz@ttproducts.de>
    * new feature: Use the option MAXSIZE to set the maximum size for a debug file.
    * convert the code from self into static variable and method calls.

2018-01-17  Franz Holzinger  <franz@ttproducts.de>
    * changed display: Move the variable name into the middle and the backtrace in reverse order to the bottom of the debug line.

2017-11-28  Franz Holzinger  <franz@ttproducts.de>
    * bug fix: The debug of the systemLog must be based on a core hook. It shall not rely on another extension which writes the sys_log file.

2017-08-08  Franz Holzinger  <franz@ttproducts.de>
    * Make the path to the CSS file configurable. EXT:fh_debug means that the path to the CSS folder of this extension is used.

2017-07-12  Franz Holzinger  <franz@ttproducts.de>
    * adaptions to Coding Guidelines

2017-07-04  Franz Holzinger  <franz@ttproducts.de>